# ChessEngine

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Engine.cpp  Engine.h  main.cpp  mmath.cpp  mmath.h
chess/: Board.cpp  Board.h  BoardMove.cpp  BoardMove.h  MoveJudge.cpp  MoveJudge.h  PieceParser.cpp  PieceParser.h  Square.cpp  Square.h
engine/: Engine.cpp  Engine.h
